# DEXCO

./: app.py  biblioteca.py  main.py  pegar_id.py
App dexco/: main.py
App dexco 1.0/: main.py
App dexco 1.0/Bases/Base_mover_processo/: mover_processo.xlsx  mover_processo2.xlsx
App dexco 1.0/Bases/base_analisar_inbound/: base_analisar_inbound.xlsx  base_analisar_inbound2.xlsx
App dexco 1.0/Bases/base_extrair_descri/: base_extrair_descrição.xlsx
App dexco 1.0/Bases/base_pegar_id/: pegar_id.xlsx  pegar_id2.xlsx
App dexco 1.0/back_end/: abrir_base.py  analise_inbound.py  extrair_descri.py  mover_processo.py  pegar_id_v360.py
App dexco/Bases/Base_mover_processo/: mover_processo.xlsx  mover_processo2.xlsx
App dexco/Bases/base_analisar_inbound/: base_analisar_inbound.xlsx  base_analisar_inbound2.xlsx
App dexco/back_end/: analise_inbound.py  bibliotecas.py  mover_processo.py
Back/: pyproject.toml
Back/Bases/Base_mover_processo/: mover_processo.xlsx
Back/Bases/base_extrair_descri/: base_extrair_descrição2.xlsx
Back/Bases/base_pegar_id/: pegar_id2.xlsx
Back/back_end/: bibliotecas.py  extrair_descri.py  mover_processo.py  pegar_id_v360.py
Base/: pegar_id2.xlsx
