[tool.poetry]
name = "webscraping"
version = "0.1.0"
description = ""
authors = ["Mateus santos"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.0"
selenium = "^4.12.0"
openpyxl = "^3.1.2"
pysimplegui = "^4.60.5"
python-dotenv = "^1.0.0"
xmltodict = "^0.13.0"
pyautogui = "^0.9.54"
webdriver-manager = "^4.0.1"
chromedrivermanager = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"